fixed: footer padding alignment

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -14,6 +14,14 @@
     padding: 5rem 6rem;
 
     @media (max-width: 800px) {
+      padding: 5rem;
+    }
+
+    @media (max-width: 600px) {
+      padding: 5rem 3rem;
+    }
+
+    @media (max-width: 500px) {
       padding: 5rem 2rem;
     }
   }
